# sqladal

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/api_demo/: serve.py
examples/secure_api/: serve.py
examples/websaw_api/: serve.py
examples/websaw_api/apps/site/: controllers.py
src/sqladal/: __init__.py  adapters.py  aio.py  base.py  compat.py  dialects.py  migrator.py  objects.py  openapi.py  restapi.py  smartquery.py  types.py  utils.py  validators.py
tests/: conftest.py  test_api_extras.py  test_async.py  test_behavioral_parity.py  test_fields.py  test_filters.py  test_migrate_union.py  test_openapi.py  test_parity.py  test_primarykey.py  test_restapi.py  test_restapi_pk.py  test_smoke.py  test_voodoodal.py  test_websaw.py  test_websaw_http.py
